# tap-shiphero

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
tap_shiphero/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_shiphero/gql_queries/: line_item_pick.graphql  orders.graphql  products.graphql  purchase_orders.graphql  returns.graphql  shipments.graphql  vendors.graphql
tap_shiphero/schemas/: line_item_pick.json  orders.json  products.json  purchase_orders.json  returns.json  shipments.json  vendors.json
tests/: __init__.py  test_core.py
